# IO_article_to_xml

./: .xml  article.py  author.py  common.py  data_utils.py  main.py  progress_window.py  pyproject.toml
data/: article.py  author.py  enum_const.py  workplace.py
data/extractor/: data_extractor.py  extraction_strategy.py
data/saver/: data_saver.py  saving_strategy.py
data_utils/: article.py  enum_const.py
data_utils/extractor/: data_extractor.py  extraction_strategy.py
data_utils/saver/: data_saver.py
view_model/: main_view_model.py
